# multi_sensor_collector

./: .clang-format  .gitignore  CMakeLists.txt  README.md
config/: evk4_hd.bias  evk4_hd_dark.bias  h52bag.yaml  suite.yaml
src/: main.cpp
src/core/: data_writer.cpp  data_writer.h  logger.cpp  logger.h  sensor_base.h  serial_helper.cpp  serial_helper.h  synchronizer.cpp  synchronizer.h  types.h  ui.cpp  ui.h
src/fileio/: file_base.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h
src/plugin/: evk4_hd.cpp  evk4_hd.h  ins_probe.cpp  ins_probe.h
utils/: CMakeLists.txt  plot_dynamic.py
utils/h52bag/: CMakeLists.txt  h52bag.cpp
